--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.example.bluetooth"
         minSdk 21
         targetSdk 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,4 +35,12 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+//    implementation 'com.github.xiaofeidev:round:1.1.1'
+
+    //implementation "io.reactivex.rxjava2:rxandroid:2.2.21"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.21"
+
+//    implementation "io.reactivex.rxjava3:rxandroid:3.1.4"
+//    implementation "io.reactivex.rxjava3:rxjava:3.1.4"
 }
